--- a/PleaseWorkV1/PleaseWorkV1/PleaseWorkV1.csproj
+++ b/PleaseWorkV1/PleaseWorkV1/PleaseWorkV1.csproj
@@ -66,6 +66,11 @@
     <AndroidResource Include="Resources\layout\Menu.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\drawable\qublogo.png" />
+    <AndroidResource Include="Resources\layout\LoginPageRedone.xml" />
+    <AndroidResource Include="Resources\drawable\gradient.xml" />
+    <AndroidResource Include="Resources\drawable\border.xml" />
+    <AndroidResource Include="Resources\drawable\buttonborder.xml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Login.axml">
